@@ -1,12 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.225 2006/05/04 04:07:46 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.226 2006/06/05 01:11:16 agaffney Exp $
 
   8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/fe/gtk/RunInstall.py, src/fe/gtk/URIBrowser.py:
   remove extra print statements
 
 *GLI-gtkfe-0.3 (11 Feb 2006)
+
+  4 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
+  add X of Y to FutureBar
+  update Welcome.py help for install mode
 
   2 May 2006; Andrew Gaffney <agaffney@gentoo.org>
   added splashscreen
